--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/AdriannoSanttos/teste-ebac-ui#readme",
   "dependencies": {
     "cypress": "^13.6.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.9.0"
   }
 }
